--- a/src/main/resources/templates/sede/sedeValidate.html
+++ b/src/main/resources/templates/sede/sedeValidate.html
@@ -24,7 +24,7 @@
 					<div class="modal-body">
 
 						<!-- fragment tutte le valutazioni -->
-						<th:block th:include="valutazione/valutazioneShowAll :: showAll(sedeWrapper)"></th:block>
+						<th:block th:include="valutazione/valutazioneValutatoriAll :: valutatoriAll(sedeWrapper)"></th:block>
 
 					</div>
 
