--- a/src/main/resources/templates/valutazione/valutazioneValutatoriAll.html
+++ b/src/main/resources/templates/valutazione/valutazioneValutatoriAll.html
@@ -5,7 +5,7 @@
 <head lang="it">
 </head>
 <body>
-	<th:block th:fragment="showAll(wrapper)">
+	<th:block th:fragment="valutatoriAll(wrapper)">
 		<table id="tabella-modale" class="datatable-responsive-search-validation table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 			<thead>
 				<tr>
