--- a/src/main/resources/templates/evento/eventoValidate.html
+++ b/src/main/resources/templates/evento/eventoValidate.html
@@ -22,7 +22,7 @@
 					<div class="modal-body">
 
 						<!-- fragment tutte le valutazioni -->
-						<th:block th:include="valutazione/valutazioneShowAll :: showAll(eventoWrapper)"></th:block>
+						<th:block th:include="valutazione/valutazioneValutatoriAll :: valutatoriAll(eventoWrapper)"></th:block>
 
 					</div>
 
