--- a/src/main/resources/templates/persona/personaValidate.html
+++ b/src/main/resources/templates/persona/personaValidate.html
@@ -22,7 +22,7 @@
 					<div class="modal-body">
 
 						<!-- fragment tutte le valutazioni -->
-						<th:block th:include="valutazione/valutazioneShowAll :: showAll(personaWrapper)"></th:block>
+						<th:block th:include="valutazione/valutazioneValutatoriAll :: valutatoriAll(personaWrapper)"></th:block>
 
 					</div>
 
