--- a/src/main/resources/templates/accreditamento/accreditamentoShowAll.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShowAll.html
@@ -15,12 +15,12 @@
 						<h2 style="display: inline" th:text="#{label.info_provider}">label.info_provider</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.provider != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.provider != null}">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
 
-					<div th:if="${accreditamentoWrapper.provider != null}" id="providerBlock" class="collapsible"></div>
+					<div th:if="${accreditamentoWrapper.provider != null}" id="providerBlock" class="container-collapse"></div>
 
 				</div>
 
@@ -30,12 +30,12 @@
 						<h2 style="display: inline" th:text="#{label.sede_legale}">label.sede_legale</h2>
 						<h2 style="display: inline" th:if="${accreditamentoWrapper.sedeLegale.new}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:unless="${accreditamentoWrapper.sedeLegale.new}">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
 
-					<div th:unless="${accreditamentoWrapper.sedeLegale.new}" id="sedeLegaleBlock" class="collapsible"></div>
+					<div th:unless="${accreditamentoWrapper.sedeLegale.new}" id="sedeLegaleBlock" class="container-collapse"></div>
 
 				</div>
 
@@ -45,12 +45,12 @@
 						<h2 style="display: inline" th:text="#{label.sede_operativa}">label.sede_operativa</h2>
 						<h2 style="display: inline" th:if="${accreditamentoWrapper.sedeOperativa.new}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:unless="${accreditamentoWrapper.sedeOperativa.new}">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
 
-					<div th:unless="${accreditamentoWrapper.sedeOperativa.new}" id="sedeOpBlock" class="collapsible"></div>
+					<div th:unless="${accreditamentoWrapper.sedeOperativa.new}" id="sedeOpBlock" class="container-collapse"></div>
 
 				</div>
 
@@ -60,12 +60,12 @@
 						<h2 style="display: inline" th:text="#{label.legale_rappresentante}">label.legale_rappresentante</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.legaleRappresentante != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.legaleRappresentante != null}">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
 
-					<div th:if="${accreditamentoWrapper.legaleRappresentante != null}" id="legaleBlock" class="collapsible"></div>
+					<div th:if="${accreditamentoWrapper.legaleRappresentante != null}" id="legaleBlock" class="container-collapse"></div>
 
 				</div>
 
@@ -75,12 +75,12 @@
 						<h2 style="display: inline" th:text="#{label.delegato_legale_rappresentante}">label.delegato_legale_rappresentante</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.delegatoLegaleRappresentante != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.delegatoLegaleRappresentante != null}">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
 
-					<div th:if="${accreditamentoWrapper.delegatoLegaleRappresentante != null}" id="delegatoBlock" class="collapsible"></div>
+					<div th:if="${accreditamentoWrapper.delegatoLegaleRappresentante != null}" id="delegatoBlock" class="container-collapse"></div>
 
 				</div>
 
@@ -90,12 +90,12 @@
 						<h2 style="display: inline" th:text="#{label.dati_accreditamento}">label.dati_accreditamento</h2>
 						<h2 style="display: inline" th:if="${accreditamentoWrapper.datiAccreditamento.new}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:unless="${accreditamentoWrapper.datiAccreditamento.new}">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
 
-					<div th:unless="${accreditamentoWrapper.datiAccreditamento.new}" id="datiBlock" class="collapsible"></div>
+					<div th:unless="${accreditamentoWrapper.datiAccreditamento.new}" id="datiBlock" class="container-collapse"></div>
 
 				</div>
 
@@ -105,12 +105,12 @@
 						<h2 style="display: inline" th:text="#{label.responsabile_segreteria}">label.responsabile_segreteria</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.responsabileSegreteria != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.responsabileSegreteria != null}">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
 
-					<div th:if="${accreditamentoWrapper.responsabileSegreteria != null}" id="rSegreteriaBlock" class="collapsible"></div>
+					<div th:if="${accreditamentoWrapper.responsabileSegreteria != null}" id="rSegreteriaBlock" class="container-collapse"></div>
 
 				</div>
 				<!-- riempito con chiamata ajax responsabile amministrativo -->
@@ -119,12 +119,12 @@
 						<h2 style="display: inline" th:text="#{label.responsabile_amministrativo}">label.responsabile_amministrativo</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.responsabileAmministrativo != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.responsabileAmministrativo != null}">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
 
-					<div th:if="${accreditamentoWrapper.responsabileAmministrativo != null}" id="rAmministrativoBlock" class="collapsible"></div>
+					<div th:if="${accreditamentoWrapper.responsabileAmministrativo != null}" id="rAmministrativoBlock" class="container-collapse"></div>
 
 				</div>
 
@@ -134,12 +134,12 @@
 						<h2 style="display: inline" th:text="#{label.responsabile_sistema_informatico}">label.responsabile_sistema_informatico</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.responsabileSistemaInformatico != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.responsabileSistemaInformatico != null}">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
 
-					<div th:if="${accreditamentoWrapper.responsabileSistemaInformatico != null}" id="rSisInformaticoBlock" class="collapsible"></div>
+					<div th:if="${accreditamentoWrapper.responsabileSistemaInformatico != null}" id="rSisInformaticoBlock" class="container-collapse"></div>
 
 				</div>
 
@@ -149,12 +149,12 @@
 						<h2 style="display: inline" th:text="#{label.responsabile_qualita}">label.responsabile_qualita</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.responsabileQualita != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.responsabileQualita != null}">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
 
-					<div th:if="${accreditamentoWrapper.responsabileQualita != null}" id="rQualitaBlock" class="collapsible"></div>
+					<div th:if="${accreditamentoWrapper.responsabileQualita != null}" id="rQualitaBlock" class="container-collapse"></div>
 
 				</div>
 
@@ -164,7 +164,7 @@
 						<h2 style="display: inline" th:text="#{label.componenti_comitato_scientifico}">label.componenti_comitato_scientifico</h2>
 						<h2 style="display: inline" th:if="${#lists.isEmpty(accreditamentoWrapper.componentiComitatoScientifico) and accreditamentoWrapper.coordinatoreComitatoScientifico == null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:unless="${#lists.isEmpty(accreditamentoWrapper.componentiComitatoScientifico) and accreditamentoWrapper.coordinatoreComitatoScientifico == null}">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -172,12 +172,12 @@
 					<th:block th:if="${accreditamentoWrapper.coordinatoreComitatoScientifico != null}">
 						<h2 th:text="#{label.coordinatore_comitato} + ': ' + ${accreditamentoWrapper.coordinatoreComitatoScientifico.anagrafica.nome + ' ' + accreditamentoWrapper.coordinatoreComitatoScientifico.anagrafica.cognome}">label.coordinatore_comitato</h2>
 						<div class="divider-dashed"></div>
-						<div th:id="coordinatoreBlock" class="collapsible"></div>
+						<div th:id="coordinatoreBlock" class="container-collapse"></div>
 					</th:block>
 					<th:block th:each="componente, row : ${accreditamentoWrapper.componentiComitatoScientifico}">
 						<h2 th:text="#{label.componente_comitato} + ': ' + ${componente.anagrafica.nome} + ' ' + ${componente.anagrafica.cognome}">label.componente_comitato</h2>
 						<div th:unless="${row.last}" class="divider-dashed"></div>
-						<div th:id="componente+${componente.id}+Block" class="collapsible" role="iterComponente" th:attr="data-valore-id=${componente.id}"></div>
+						<div th:id="componente+${componente.id}+Block" class="container-collapse" role="iterComponente" th:attr="data-valore-id=${componente.id}"></div>
 					</th:block>
 
 				</div>
@@ -187,12 +187,12 @@
               		<div class="x_title">
 						<h2 style="display: inline" th:text="#{label.allegati}">label.allegati</h2>
 						<ul class="nav navbar-right panel_toolbox">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
 
-					<div id="allegatiBlock" class="collapsible"></div>
+					<div id="allegatiBlock" class="container-collapse"></div>
 
 				</div>
 
@@ -202,7 +202,7 @@
 						<h2 style="display: inline" th:text="#{label.eventi_piano_formativo}">label.eventi_piano_formativo</h2>
 						<h2 style="display: inline" th:if="${#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo?.eventi)}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:unless="${#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo?.eventi)}">
-		                    <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -211,7 +211,7 @@
 						<th:block th:each="evento, row : ${accreditamentoWrapper.accreditamento.pianoFormativo.eventi}">
 							<h2 th:text="#{label.evento} + ': ' + ${evento.titolo}">label.componente_comitato</h2>
 							<div th:unless="${row.last}" class="divider-dashed"></div>
-							<div th:id="evento+${evento.id}+Block" class="collapsible" role="iterEvento" th:attr="data-valore-id=${evento.id}"></div>
+							<div th:id="evento+${evento.id}+Block" class="container-collapse" role="iterEvento" th:attr="data-valore-id=${evento.id}"></div>
 						</th:block>
 					</th:block>
 
@@ -306,7 +306,7 @@
 					})
 				}
 
-				$('#showAll-modal').on('shown.bs.modal', function (e) {
+				$('#showAll-modal').one('shown.bs.modal', function (e) {
 					//table responsive professioni/discipline show
 					$('.datatable-responsive-discipline').DataTable({
 						"bFilter" : false,
@@ -334,15 +334,14 @@
 				        }
 
 					});
-				})
+				});
 
-				//ripristina/chiude tutte le favicon
-				$('#showAll-modal').on('hidden.bs.modal', function (e) {
-					$(".fa-chevron-up").each(function(index) {
-						$(this).addClass('fa-chevron-down');
-						$(this).removeClass('fa-chevron-up');
-					});
-				})
+				//mostra nascondi div con informazioni
+				$('.link-collapse').on('click', function() {
+					$(this).children().toggleClass("fa-chevron-down fa-chevron-up");
+					$(this).parents(".x_title").siblings(".container-collapse").slideToggle("slow");
+				});
+
 			/*]]>*/
 			</script>
 		</th:block>
