--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -92,6 +92,29 @@
 					</div>
 				</div>
 
+				<!-- modale showAllValutazioni -->
+				<div id="showAllValutazioni-modal" class="modal fade modal-showAllValutazioni"
+					data-model-index="1" role="dialog">
+					<div class="modal-dialog modal-lg">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal">
+									<span aria-hidden="true">×</span>
+								</button>
+								<h4 class="modal-title" id="myModalLabel"
+									th:text="#{label.riepilogo_valutazione_accreditamento(${accreditamentoWrapper.accreditamento.tipoDomanda}, ${accreditamentoWrapper.accreditamento.stato})}">Riepilogo
+									di tutto l'accreditamento</h4>
+							</div>
+							<div class="modal-body">
+
+								<!-- fragment show all -->
+								<th:block th:include="valutazione/valutazioneShowAll :: showAllValutazioni"></th:block>
+
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<div class="x_panel">
 					<div class="x_title">
 						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.codiceFiscale + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
@@ -99,9 +122,13 @@
 							<button th:if="${accreditamentoWrapper.canValutaDomanda and accreditamentoWrapper.canSendValutazione}" type="button" class="btn btn-success pull-right"
 								th:text="#{label.conferma_valutazione}" data-toggle="modal" data-target=".modal-confirm"></button>
 							<!-- mostra showAll -->
-							<button type="button" class="btn btn-primary pull-right"
-								th:text="#{label.mostra_riepilogo}" onclick="populateShowAll()"
+							<button type="button" class="btn btn-primary pull-right ajaxCallShowAll"
+								th:text="#{label.mostra_riepilogo}"
 								data-toggle="modal" data-target=".modal-showAll"></button>
+							<!-- mostra showAllValutazioni -->
+							<button type="button" class="btn btn-primary pull-right ajaxCallShowAllValutazioni"
+								th:text="#{label.mostra_riepilogo_valutazioni}"
+								data-toggle="modal" data-target=".modal-showAllValutazioni"></button>
 							<button type="button" class="btn btn-primary pull-right" th:text="#{label.torna_in_visualizzazione}" onclick="switchMode('show')"></button>
 						</div>
 						<div class="clearfix"></div>
@@ -148,6 +175,9 @@
 					var url = [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/|}]] + mode + param;
 					location.href = url;
 				}
+
+				$('.ajaxCallShowAll').one("click", populateShowAll());
+				$('.ajaxCallShowAllValutazioni').one("click", populateShowAllValutazioni());
 
 			/*]]>*/
 			</script>
