--- a/src/main/resources/templates/evento/eventoValidate.html
+++ b/src/main/resources/templates/evento/eventoValidate.html
@@ -21,8 +21,10 @@
 					</div>
 					<div class="modal-body">
 
-						<!-- fragment tutte le valutazioni -->
-						<th:block th:include="valutazione/valutazioneValutatoriAll :: valutatoriAll(eventoWrapper)"></th:block>
+						<div id="toValidateModal">
+							<!-- fragment tutte le valutazioni -->
+							<th:block th:include="valutazione/valutazioneValutatoriAll :: valutatoriAll(eventoWrapper)"></th:block>
+						</div>
 
 					</div>
 
